fix: enhance api documentation
